[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/BoolActivator.png" type="Texture" id=1]
[ext_resource path="res://Scenes/BoolActivator.gd" type="Script" id=2]
[ext_resource path="res://Sounds/InteractSound.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[node name="BoolActivator" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="TextureRect" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_BoolActivator_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_BoolActivator_body_entered"]
